main body has been done now

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./font/css/all.css">
-    <link rel="stylesheet" href="css/style.css?version=1">
+    <link rel="stylesheet" href="css/style.css?version=3">
     <title>Facebook fronend</title>
 </head>
 <body>
     <div class="container">
+        <!-- ===========Navbar start=============== -->
         <div class="navbar">
             <div class="row">
                 <div class="col1">
@@ -70,6 +71,9 @@
                 </div>
             </div>
         </div>
+        <!-- Navbar completed============ -->
+
+        <!-- ============Left-navbar============= -->
         <div class="left-navbar">
             <div class="row">
                 <div class="col">
@@ -129,6 +133,81 @@
                 <hr>
                 <h2 style="color: #65676b;margin-top: 10px;">Your Shortcuts</h2>
                 
+            </div>
+        </div>
+        <!-- ===========Left-navbar completed============ -->
+
+        <!-- ========stort start in main section======= -->
+      <div class="main"> 
+            <div class="stories">
+                <div class="story first">
+                    <img class="first-story" src="./images/dp.jpg">
+                    <div class="add-story">
+                        <i class="fas fa-plus"></i>
+                    </div>
+                    <div class="body-story">
+                        <p>Create story</p>
+                    </div>
+                </div>
+                <div class="story">
+                    <div class="story-icon"><img src="./images/story-dp.jpg" 
+                        style="height: 40px; width: 40px;border-radius: 50%;"></div>
+                    <img src="./images/story1.jpg">
+                    <div class="name">M. Ghulam <br>Hussain</div>
+                </div>
+                <div class="story">
+                    <div class="story-icon"><img src="./images/story-dp.jpg"
+                         style="height: 40px; width: 40px;border-radius: 50%;"></div>
+                    <img src="./images/story2.jpg">
+                    <div class="name">Name...</div></div>
+                <div class="story">
+                    <div class="story-icon"><img src="./images/story-dp.jpg" 
+                        style="height: 40px; width: 40px;border-radius: 50%;"></div>
+                    <img src="./images/story3.jpg">
+                    <div class="arrow"><i class="fas fa-arrow-right"></i></div>
+                    <div class="name">Name...</div></div>
+            </div>
+        </div>
+        <div class="add-post">
+            <div class="inner-body">
+                <div class="row1">
+                    <div class="col1"><img src="./images/dp.jpg"></div>
+                    <div class="col2"><form action="">
+                        <input type="search" placeholder="What's on your mind, Ghulam?">
+                    </form><div style="margin-top: 5px;"><hr></div></div>
+                </div>
+                <div class="row2">
+                    <div class="column"><p><i class="first fas fa-video"></i>&nbsp Live video </p></div>
+                    <div class="column"><p><i class="second far fa-images"></i> &nbsp Photo/video</p></div>
+                    <div class="column"><p><i class="third far fa-smile-wink"></i> &nbsp Feeling/Activity</p></div>
+                </div>
+            </div>
+        </div>
+        <div class="active-people">
+            <div class="row">
+                <div class="room">
+                    <p><i class="first fas fa-video"></i> &nbsp  Create Room</p>
+                </div>
+                
+                <div class="active1"><img src="./images/dp.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="active2"><img src="./images/story-dp.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="active3"><img src="./images/story1.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="active4"><img src="./images/story2.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="active5"><img src="./images/story3.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="active6"><img src="./images/story-dp.jpg" alt="">
+                    <div class="active-status"></div>
+                </div>
+                <div class="right-arrow"><i class="fas fa-chevron-right"></i></div>
             </div>
         </div>
     </div>
